# SmartLink

./: .dockerignore  CHANGELOG.md  Dockerfile  EXE_README.md  README.md  SHORTCUTS_GUIDE.md  SmartLink.py  SmartLink.spec  new.py  pyproject.toml  requirements.txt
config/: launcher_config.example.json  launcher_config.json
smartlink/: __init__.py  config.py  logging_utils.py  main.py  models.py  runtime.py
smartlink/routes/: api.py  web.py
smartlink/services/: actions.py  adb.py  integrations.py  network.py  system_control.py  tray.py
smartlink/static/: app.css  app.js  manifest.webmanifest
smartlink/templates/: base.html  dashboard.html  mobile.html
tests/: conftest.py  test_actions.py  test_adb_pair.py  test_adb_timeout.py  test_api.py  test_config.py  test_main.py  test_web.py
